--- a/css/html/selector.html
+++ b/css/html/selector.html
@@ -41,7 +41,7 @@
     <!-- end Descendant combinator -->
 
     <!-- subsequent-sibling start -->
-    <!-- <article>
+    <article>
         <p>hello</p>
         <span>This is not red because it appears before any paragraph.</span>
         <p>Here is a paragraph.</p>
@@ -57,24 +57,26 @@
             the same parent after a paragraph are red.
         </span>
     </article>
-    <span> -->
-        <!-- This span is not red because it doesn't share a parent with a paragraph. -->
-    <!-- </span> -->
+    <span> 
+        This span is not red because it doesn't share a parent with a paragraph.
+    </span>
     <!-- subsequent-sibling end -->
 
 
     <!-- next-sibling start -->
-    <!-- <ul>
+    <ul>
         <li>One</li>
         <li>Two!</li>
         <li>Three</li>
-    </ul> -->
+    </ul> 
 
 
-    <!-- <p>
+     <p>
         <b>hello!</b>
         <i>hello!</i>
-    </p> -->
+    </p>
+
+    
     <!-- next-sibling end -->
 
 
