--- a/css/html/Lists,Tables.html
+++ b/css/html/Lists,Tables.html
@@ -34,33 +34,33 @@
         <th>Name</th>
         <th>Course</th>
         <th>Age</th>
-        <th>Moble No.</th>
+        <th>roll no.</th>
       </tr>
       </thead>
       <tbody>
       <tr>
-        <td>Rishabh</td>
+        <td>kashish</td>
+        <td>B.COM</td>
+        <td>19</td>
+        <td>105</td>
+      </tr>
+      <tr>
+        <td>muskan</td>
         <td>B.Sc IT</td>
-        <td>21</td>
-        <td>8596741233</td>
+        <td>18</td>
+        <td>87</td>
       </tr>
       <tr>
-        <td>Anurag</td>
-        <td>B.Sc IT</td>
-        <td>24</td>
-        <td>2255997744</td>
+        <td>ragini</td>
+        <td>B.COM</td>
+        <td>17</td>
+        <td>76</td>
       </tr>
       <tr>
-        <td>Abhishek</td>
-        <td>MCA</td>
-        <td>23</td>
-        <td>5599776622</td>
-      </tr>
-      <tr>
-        <td>Deepak</td>
-        <td>B.Sc CS</td>
-        <td>23</td>
-        <td>2255997744</td>
+        <td>muskan2</td>
+        <td>B.com</td>
+        <td>19</td>
+        <td>98</td>
       </tr>
       </tbody>
     </table>
