--- a/css/html/font style.html
+++ b/css/html/font style.html
@@ -11,7 +11,8 @@
         <h1>Hello Word</h1>
         <p class="child-2">Something</p>
         <p class="child-3">Word</p>
-        <p class="child-4">Rishabh</p>
+        <p class="child-4">kashish</p>
+        </p>
 
     </div>
 </body>
