--- a/css/html/importants.html
+++ b/css/html/importants.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="../importants.css">
 </head>
 <body>
-    <h1>Hello Word....</h1>
-    <h1 class="middle">Hello Word </h1>
-    <h1>Hello Word </h1>
+    <h1>Hello World........</h1>
+    <h1 class="middle">Hello World...... </h1>
+    <h1>Hello World...... </h1>
 </body>
 </html>
 
