--- a/html/Marquee.html
+++ b/html/Marquee.html
@@ -6,8 +6,7 @@
     <title>Marquee</title>
     <style>
         .outlined {
-  border: solid;
-}
+  
     </style>
 </head>
 <body>
@@ -15,7 +14,7 @@
 It is deprecated (not recommended in modern websites), but still works in many browsers.
 Today, developers prefer CSS animations instead of <marquee>. -->
     
-    <marquee bgcolor="yellow" height="100%" class="outlined" behavior="alternate" direction="down">
+    <marquee bgcolor="" height="100%" class="outlined" behavior="alternate" direction="down">
         <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam quasi iure obcaecati reprehenderit quod blanditiis ipsum soluta iusto culpa assumenda!</h1>
     </marquee><br><br>
 
@@ -32,3 +31,4 @@ Today, developers prefer CSS animations instead of <marquee>. -->
 </marquee>
 </body>
 </html>
+
