--- a/html/Svg.html
+++ b/html/Svg.html
@@ -16,8 +16,8 @@
     <title>SVG Page</title>
     <style>
         .svg{
-            border: 1px solid red;
-            width: 500px;
+            border: 1px solid  red;
+            width: 500px; 
             height: 600px;
         }
     </style>
@@ -30,13 +30,13 @@ Uses XML-based tags to create graphics. -->
 
     <h1>SVG PAGE</h1>
     <svg class="svg">
-        <circle cx="0" cy="0" r="100" fill="green"/>
-        <circle cx="500" cy="0" r="100" fill="green"/>
-        <circle cx="0" cy="600" r="100" fill="green"/>
-        <circle cx="500" cy="600" r="100" fill="green"/>
-        <circle cx="250" cy="280" r="100" fill="green"/>
+        <circle cx="0" cy="0" r="100" fill="pink"/>
+        <circle cx="500" cy="0" r="100" fill="pink"/>
+        <circle cx="0" cy="600" r="100" fill="pink"/>
+        <circle cx="500" cy="600" r="100" fill="pink"/>
+        <circle cx="250" cy="280" r="150" fill="pink"/>
 
-        <rect x="100" y="310" width="300" height="150" fill="blue"/>
+        <rect x="100" y="310" width="300" height="150" fill="purple"/>
 
         <line x1="0" y1="0" x2="500" y2="600"  stroke="black" stroke-width="4"/>
         <line x1="500" y1="0" x2="0" y2="600" stroke="black" stroke-width="4"/>
