--- a/css/html/skew.html
+++ b/css/html/skew.html
@@ -13,6 +13,8 @@
     <div class="box child-3"></div>
     <div class="box child-4"></div>
     <div class="box child-5"></div>
+    <div class="box child-6"></div>
+    
   </div>
 </body>
 </html>
