--- a/html/comments&color.html
+++ b/html/comments&color.html
@@ -10,7 +10,11 @@
   <!-- This is a comment. It won’t be shown on the webpage -->
   <h1>Welcome to My Website</h1>
   <!-- <p>This paragraph is hidden because it’s inside a comment</p> -->
-   <p style="color: red;">This is red text</p>
-   <p style="background-color: yellow;">This has yellow background</p>
+   <p style="color: rgb(118, 189, 217);">This is red text</p>
+   <p style="background-color: rgb(238, 79, 207);">This has yellow background</p>
 </body>
 </html>
+
+
+
+
